# rust_fullstack_todo

./: .gitignore  Cargo.toml  Deployment.md  Design.md  Dockerfile  LICENSE  README.md  frontend-47929d2e3332422f02e4114d025ec54758493900ce92c902369d4af93552a695c69495179d8e8220562a718948000e32.js  frontend-47929d2e3332422f02e4114d025ec54758493900ce92c902369d4af93552a695c69495179d8e8220562a718948000e32_bg.wasm  index-e9145615e842285.js  index-e9145615e842285_bg.wasm  index.html
.github/workflows/: frontend.yml
backend/: Cargo.toml  application.toml  docker-compose.yaml
backend/schemas/: 00_init_tables.sql
backend/src/: lib.rs  main.rs
backend/src/applications/: mod.rs
backend/src/domains/: todo_domain.rs  todo_repository.rs
backend/src/handlers/: mod.rs  ping_handler.rs
backend/src/handlers/todo_handler/: clear_todos.rs  create_todo.rs  delete_todo.rs  get_todo_by_id.rs  get_todos.rs  mod.rs  update_todo.rs  update_todo_status.rs
backend/src/infra/: config.rs  db.rs
backend/tests/: helper.rs  ping.rs  test_hello_index.rs  todo.rs  todo_integration.rs  todo_integration_test.rs
backend/tests/client/: mod.rs  todo.rs
common/: Cargo.toml
common/src/: client.rs  model.rs
common/src/client/: ping_client.rs  todo_client.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  domain.rs  hooks.rs  icon.rs  main.rs  namespace.rs  state.rs  states.rs
frontend/src/components/: add_todo.rs  clear_deleted.rs  datasource_switcher.rs  mod.rs  tabs.rs  todo_control.rs  todo_detail.rs
schemas/: 00_init_tables.sql
src/: lib.rs  main.rs
src/applications/: todo_application.rs
src/domains/: mod.rs  todo_domain.rs  todo_repository.rs
src/handlers/: hello_handler.rs  mod.rs
src/handlers/todo_handler/: create_todo.rs  delete_todo.rs  get_todos.rs  mod.rs  update_todo.rs  update_todo_status.rs
src/infra/: config.rs  mod.rs
tests/: test_hello_index.rs
