[workspace]
resolver = "2"
members = ["backend", "frontend", "common"]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.release.package.frontend]
strip = false        # Strip symbols from binary*
