[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-cors = "0.6.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
config = "0.12.0"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
tokio-postgres = "0.7.5"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
postgres-types = { version = "0.2.2", features = ["derive"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
async-trait = "0.1.53"
common = { path = "../common" }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
