[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.56"
chrono = { version = "0.4", features= ["serde"] }
